dev/test_memory_leaks.txt
==27846== Memcheck, a memory error detector
==27846== Copyright (C) 2002-2017, and GNU GPL'd, by Julian Seward et al.
==27846== Using Valgrind-3.18.1 and LibVEX; rerun with -h for copyright info
==27846== Command: /usr/lib/R/bin/exec/R --vanilla -f dev/test_memory_leaks.r
==27846== 

R version 4.3.3 (2024-02-29) -- "Angel Food Cake"
Copyright (C) 2024 The R Foundation for Statistical Computing
Platform: x86_64-pc-linux-gnu (64-bit)

R is free software and comes with ABSOLUTELY NO WARRANTY.
You are welcome to redistribute it under certain conditions.
Type 'license()' or 'licence()' for distribution details.

  Natural language support but running in an English locale

R is a collaborative project with many contributors.
Type 'contributors()' for more information and
'citation()' on how to cite R or R packages in publications.

Type 'demo()' for some demos, 'help()' for on-line help, or
'help.start()' for an HTML browser interface to help.
Type 'q()' to quit R.

> if (!require("devtools")) install.packages("devtools")
Loading required package: devtools
Loading required package: usethis
> devtools::load_all()
ℹ Loading fixest2
ℹ Re-compiling fixest2 (debug build)
── R CMD INSTALL ───────────────────────────────────────────────────────────────
* installing *source* package ‘fixest2’ ...
** using staged installation
** libs
using C++ compiler: ‘g++ (Ubuntu 11.4.0-1ubuntu1~22.04) 11.4.0’
g++ -std=gnu++17 -I"/usr/share/R/include" -DNDEBUG -I vendor/ -UDEBUG -g     -fopenmp -Wall -O0 -pedantic -fpic  -g -O2 -ffile-prefix-map=/build/r-base-14Q6vq/r-base-4.3.3=. -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2  -UNDEBUG -Wall -pedantic -g -O0 -c 05_01_misc_helpers.cpp -o 05_01_misc_helpers.o
05_01_misc_helpers.cpp: In function ‘bool cpp_isConstant_(cpp11::doubles)’:
05_01_misc_helpers.cpp:308:8: error: ‘cout’ is not a member of ‘std’
  308 |   std::cout << "HELLOOO THIS IS VALUE" << value << std::endl;
      |        ^~~~
05_01_misc_helpers.cpp:2:1: note: ‘std::cout’ is defined in header ‘<iostream>’; did you forget to ‘#include <iostream>’?
    1 | #include "05_0_misc.hpp"
  +++ |+#include <iostream>
    2 | 
make: *** [/usr/lib/R/etc/Makeconf:200: 05_01_misc_helpers.o] Error 1
ERROR: compilation failed for package ‘fixest2’
* removing ‘/tmp/Rtmp0y8yTk/devtools_install_6cc63abc955/fixest2’
Error in `(function (command = NULL, args = character(), error_on_status = TRUE, …`:
! System command 'R' failed
---
Exit status: 1
stdout & stderr: <printed>
---
Backtrace:
 1. devtools::load_all()
 2. pkgload::load_all(path = path, reset = reset, recompile = recompile, …
 3. pkgbuild::compile_dll(path, quiet = quiet)
 4. pkgbuild:::withr_with_makevars(compiler_flags(debug), { …
 5. pkgbuild:::withr_with_envvar(c(R_MAKEVARS_USER = makevars_file), { …
 6. base::force(code)
 7. base::force(code)
 8. pkgbuild:::withr_with_envvar(c(DEBUG = "true"), build())
 9. base::force(code)
10. pkgbuild::build()
11. pkgbuild:::install_min(path, dest = install_dir, components = "libs", args = if (need…
12. pkgbuild::rcmd_build_tools("INSTALL", c(path, paste("--library=", dest, …
13. pkgbuild::with_build_tools({ …
14. base::withCallingHandlers(callr::rcmd_safe(..., env = env, spinner = FALSE, …
15. callr::rcmd_safe(..., env = env, spinner = FALSE, show = FALSE, …
16. callr:::run_r(options)
17. base::with(options, with_envvar(env, do.call(processx::run, c(list(bin, …
18. base::with.default(options, with_envvar(env, do.call(processx::run, …
19. base::eval(substitute(expr), data, enclos = parent.frame())
20. base::eval(substitute(expr), data, enclos = parent.frame())
21. callr:::with_envvar(env, do.call(processx::run, c(list(bin, args = real_cmdargs, …
22. base::force(code)
23. base::do.call(processx::run, c(list(bin, args = real_cmdargs, stdout_line_callba…
24. (function (command = NULL, args = character(), error_on_status = TRUE, …
25. base::throw(new_process_error(res, call = sys.call(), echo = echo, …
26. | base::signalCondition(cond)
27. (function (e) …
28. asNamespace("callr")$err$throw(e)
==27846== Source and destination overlap in memcpy_chk(0x4bd6784, 0x4bd6780, 55)
==27846==    at 0x48539B2: __memcpy_chk (in /usr/libexec/valgrind/vgpreload_memcheck-amd64-linux.so)
==27846==    by 0x4980EDE: ??? (in /usr/lib/R/lib/libR.so)
==27846==    by 0x497CD92: ??? (in /usr/lib/R/lib/libR.so)
==27846==    by 0x498314C: ??? (in /usr/lib/R/lib/libR.so)
==27846==    by 0x4983201: ??? (in /usr/lib/R/lib/libR.so)
==27846==    by 0x4993264: ??? (in /usr/lib/R/lib/libR.so)
==27846==    by 0x49ADCFF: Rf_eval (in /usr/lib/R/lib/libR.so)
==27846==    by 0x49AFD85: ??? (in /usr/lib/R/lib/libR.so)
==27846==    by 0x49B0BB4: Rf_applyClosure (in /usr/lib/R/lib/libR.so)
==27846==    by 0x499ECFC: ??? (in /usr/lib/R/lib/libR.so)
==27846==    by 0x49ADCFF: Rf_eval (in /usr/lib/R/lib/libR.so)
==27846==    by 0x49AFD85: ??? (in /usr/lib/R/lib/libR.so)
==27846== 
Execution halted
==27846== 
==27846== HEAP SUMMARY:
==27846==     in use at exit: 102,260,688 bytes in 20,273 blocks
==27846==   total heap usage: 118,289 allocs, 98,016 frees, 227,464,051 bytes allocated
==27846== 
==27846== LEAK SUMMARY:
==27846==    definitely lost: 0 bytes in 0 blocks
==27846==    indirectly lost: 0 bytes in 0 blocks
==27846==      possibly lost: 0 bytes in 0 blocks
==27846==    still reachable: 102,260,688 bytes in 20,273 blocks
==27846==                       of which reachable via heuristic:
==27846==                         newarray           : 4,264 bytes in 1 blocks
==27846==         suppressed: 0 bytes in 0 blocks
==27846== Rerun with --leak-check=full to see details of leaked memory
==27846== 
==27846== ERROR SUMMARY: 1 errors from 1 contexts (suppressed: 0 from 0)
==27846== 
==27846== 1 errors in context 1 of 1:
==27846== Source and destination overlap in memcpy_chk(0x4bd6784, 0x4bd6780, 55)
==27846==    at 0x48539B2: __memcpy_chk (in /usr/libexec/valgrind/vgpreload_memcheck-amd64-linux.so)
==27846==    by 0x4980EDE: ??? (in /usr/lib/R/lib/libR.so)
==27846==    by 0x497CD92: ??? (in /usr/lib/R/lib/libR.so)
==27846==    by 0x498314C: ??? (in /usr/lib/R/lib/libR.so)
==27846==    by 0x4983201: ??? (in /usr/lib/R/lib/libR.so)
==27846==    by 0x4993264: ??? (in /usr/lib/R/lib/libR.so)
==27846==    by 0x49ADCFF: Rf_eval (in /usr/lib/R/lib/libR.so)
==27846==    by 0x49AFD85: ??? (in /usr/lib/R/lib/libR.so)
==27846==    by 0x49B0BB4: Rf_applyClosure (in /usr/lib/R/lib/libR.so)
==27846==    by 0x499ECFC: ??? (in /usr/lib/R/lib/libR.so)
==27846==    by 0x49ADCFF: Rf_eval (in /usr/lib/R/lib/libR.so)
==27846==    by 0x49AFD85: ??? (in /usr/lib/R/lib/libR.so)
==27846== 
==27846== ERROR SUMMARY: 1 errors from 1 contexts (suppressed: 0 from 0)
